# historical-sources-search

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  build-ui.sh  main_dev.py  pyproject.toml  setup-dev.sh
search-ui/: eslint.config.js  index.html  package.json  vite.config.ts
search-ui/src/: App.css  App.tsx  index.css  main.tsx
search-ui/src/components/: SearchResultCard.tsx  SearchResults.tsx  SearchState.tsx
search-ui/src/models/: collection-info.ts  search-result.ts
search-ui/src/services/: api.ts
src/: entrypoint.sh
src/historical_sources_search/: api.py  env.py  exceptions.py  logging_config.py  main.py  search.py  search_result.py
src/historical_sources_search/collections/: base.py  base_browser_paging.py  constitution_annotated.py  facing_history.py  library_of_congress.py
src/historical_sources_search/logging/: config-dict.json  config.py  filter_less_than.py
src/historical_sources_search/source_collections/: base.py  example_collection.py
src/historical_sources_search/static/: index.html
